code refactoring to the meter 2800 codes

--- a/Meter2800/MFCC-Extraction.ipynb
+++ b/Meter2800/MFCC-Extraction.ipynb
@@ -11,36 +11,15 @@
     "from operator import index\n",
     "import math\n",
     "import pandas as pd\n",
-    "import json\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
     "import librosa\n",
     "import librosa.display\n",
-    "import IPython.display as ipd\n",
-    "from sklearn.metrics import pairwise_distances\n",
-    "from sklearn.preprocessing import normalize\n",
     "import warnings\n",
-    "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "JSON_PATH = \"../data.json\"\n",
     "folder_path = \"../MFCC_NPY/\"\n",
-    "\n",
     "sample_rate = 22050\n",
     "duration = 30  # mesaured in seconds\n",
     "samples_per_track = sample_rate * duration"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "id": "8a881668-ee2e-4f39-b014-1fa4e1cf7edf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def read_dataset():\n",
-    "    data = pd.read_csv(\"../data.csv\")\n",
-    "    data = data[data.meter.notnull()]\n",
-    "    return data"
    ]
   },
   {
@@ -50,8 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def extract_mfcc_into_npy( n_mfcc, hop_length, num_segments):\n",
-    "   \n",
+    "def extract_mfcc_into_npy(n_mfcc, hop_length, num_segments):\n",
     "    # loop through all songs\n",
     "    alldata = read_dataset()\n",
     "    num_samples_per_segment = int(samples_per_track / num_segments)\n",
@@ -70,11 +48,23 @@
     "                mfcc = librosa.feature.mfcc(signal[start_sample:finish_sample], n_mfcc=n_mfcc, sr=sr)\n",
     "                mfcc = mfcc.T\n",
     "                if len(mfcc) == expected_num_mfcc_vectors_per_segment:\n",
-    "                    file_name = \"mfcc\"+ str(index) + '-'+str(s)+\".npy\"\n",
+    "                    file_name = \"mfcc\" + str(index) + '-' + str(s) + \".npy\"\n",
     "                    full_name = os.path.join(folder_path, str(meter), file_name)\n",
     "                    np.save(full_name, mfcc)\n",
+    "                    \n",
+    "def read_dataset():\n",
+    "    data = pd.read_csv(\"../data.csv\")\n",
+    "    data = data[data.meter.notnull()]\n",
+    "    return data\n",
     "\n",
-    "extract_mfcc_into_npy(n_mfcc=13, hop_length=512, num_segments=10)"
+    "def main():\n",
+    "    n_mfcc = 13\n",
+    "    hop_length = 512\n",
+    "    num_segments = 10\n",
+    "    extract_mfcc_into_npy(n_mfcc, hop_length, num_segments)\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()\n"
    ]
   }
  ],
