--- a/Meter2800/MFCC-NPY-to-JSON.ipynb
+++ b/Meter2800/MFCC-NPY-to-JSON.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "331b1f3c-0278-4d23-96e6-691d721d19d4",
+   "execution_count": null,
+   "id": "9b00d411-33d6-4700-8cc8-5eaac1c70784",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,16 +12,8 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import IPython.display as ipd\n",
-    "import warnings\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9b00d411-33d6-4700-8cc8-5eaac1c70784",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import warnings\n",
+    "\n",
     "npy_path = \"../MFCC_NPY\"\n",
     "json_path = \"data.json\"\n",
     "labels_mapping = {\"four\": 0, \"three\": 1, \"five\": 2, \"seven\": 3}\n",
