added the model files containing the data for the GA runs

--- a/Ensembles/GA-Ensemble-mfcc.ipynb
+++ b/Ensembles/GA-Ensemble-mfcc.ipynb
@@ -56,26 +56,26 @@
     "num_classes = 2  # or 4, depending on the data you're working with\n",
     "\n",
     "csv_test_files = {\n",
-    "    'cnn': f\"Data/Models/Mfcc/{num_classes}-CLASSES/test/agg/cnn_mfcc_{num_classes}_cls_test_ensemble_agg.csv\",\n",
-    "    'crnn': f\"Data/Models/Mfcc/{num_classes}-CLASSES/test/agg/crnn_mfcc_{num_classes}_cls_test_ensemble_agg.csv\",\n",
-    "    'resnet': f\"Data/Models/Mfcc/{num_classes}-CLASSES/test/agg/resnet_mfcc_{num_classes}_cls_test_ensemble_agg.csv\",\n",
-    "    'resnetlstm': f\"Data/Models/Mfcc/{num_classes}-CLASSES/test/agg/resnetlstm_mfcc_{num_classes}_cls_test_ensemble_agg.csv\",\n",
-    "    'svm': f\"Data/Models/Mfcc/{num_classes}-CLASSES/test/agg/SVM_mfcc_{num_classes}_cls_test_ensemble_agg.csv\",\n",
-    "    'knn': f\"Data/Models/Mfcc/{num_classes}-CLASSES/test/agg/KNN_mfcc_{num_classes}_cls_test_ensemble_agg.csv\",\n",
-    "    'naive': f\"Data/Models/Mfcc/{num_classes}-CLASSES/test/agg/Naive_Bayes_mfcc_{num_classes}_cls_test_ensemble_agg.csv\",\n",
-    "    'forest': f\"Data/Models/Mfcc/{num_classes}-CLASSES/test/agg/R-Forest_mfcc_{num_classes}_cls_test_ensemble_agg.csv\"\n",
+    "    'cnn': f\"Models/Mfcc/{num_classes}-CLASSES/test/agg/cnn_mfcc_{num_classes}_cls_test_ensemble_agg.csv\",\n",
+    "    'crnn': f\"Models/Mfcc/{num_classes}-CLASSES/test/agg/crnn_mfcc_{num_classes}_cls_test_ensemble_agg.csv\",\n",
+    "    'resnet': f\"Models/Mfcc/{num_classes}-CLASSES/test/agg/resnet_mfcc_{num_classes}_cls_test_ensemble_agg.csv\",\n",
+    "    'resnetlstm': f\"Models/Mfcc/{num_classes}-CLASSES/test/agg/resnetlstm_mfcc_{num_classes}_cls_test_ensemble_agg.csv\",\n",
+    "    'svm': f\"Models/Mfcc/{num_classes}-CLASSES/test/agg/SVM_mfcc_{num_classes}_cls_test_ensemble_agg.csv\",\n",
+    "    'knn': f\"Models/Mfcc/{num_classes}-CLASSES/test/agg/KNN_mfcc_{num_classes}_cls_test_ensemble_agg.csv\",\n",
+    "    'naive': f\"Models/Mfcc/{num_classes}-CLASSES/test/agg/Naive_Bayes_mfcc_{num_classes}_cls_test_ensemble_agg.csv\",\n",
+    "    'forest': f\"Models/Mfcc/{num_classes}-CLASSES/test/agg/R-Forest_mfcc_{num_classes}_cls_test_ensemble_agg.csv\"\n",
     "}\n",
     "\n",
     "\n",
     "csv_val_files = {\n",
-    "    'cnn': f\"Data/Models/Mfcc/{num_classes}-CLASSES/val/agg/cnn_mfcc_{num_classes}_cls_val_ensemble_agg.csv\",\n",
-    "    'crnn': f\"Data/Models/Mfcc/{num_classes}-CLASSES/val/agg/crnn_mfcc_{num_classes}_cls_val_ensemble_agg.csv\",\n",
-    "    'resnet': f\"Data/Models/Mfcc/{num_classes}-CLASSES/val/agg/resnet_mfcc_{num_classes}_cls_val_ensemble_agg.csv\",\n",
-    "    'resnetlstm': f\"Data/Models/Mfcc/{num_classes}-CLASSES/val/agg/resnetlstm_mfcc_{num_classes}_cls_val_ensemble_agg.csv\",\n",
-    "    'svm': f\"Data/Models/Mfcc/{num_classes}-CLASSES/val/agg/SVM_mfcc_{num_classes}_cls_val_ensemble_agg.csv\",\n",
-    "    'knn': f\"Data/Models/Mfcc/{num_classes}-CLASSES/val/agg/KNN_mfcc_{num_classes}_cls_val_ensemble_agg.csv\",\n",
-    "    'naive': f\"Data/Models/Mfcc/{num_classes}-CLASSES/val/agg/Naive_Bayes_mfcc_{num_classes}_cls_val_ensemble_agg.csv\",\n",
-    "    'forest': f\"Data/Models/Mfcc/{num_classes}-CLASSES/val/agg/R-Forest_mfcc_{num_classes}_cls_val_ensemble_agg.csv\"\n",
+    "    'cnn': f\"Models/Mfcc/{num_classes}-CLASSES/val/agg/cnn_mfcc_{num_classes}_cls_val_ensemble_agg.csv\",\n",
+    "    'crnn': f\"Models/Mfcc/{num_classes}-CLASSES/val/agg/crnn_mfcc_{num_classes}_cls_val_ensemble_agg.csv\",\n",
+    "    'resnet': f\"Models/Mfcc/{num_classes}-CLASSES/val/agg/resnet_mfcc_{num_classes}_cls_val_ensemble_agg.csv\",\n",
+    "    'resnetlstm': f\"Models/Mfcc/{num_classes}-CLASSES/val/agg/resnetlstm_mfcc_{num_classes}_cls_val_ensemble_agg.csv\",\n",
+    "    'svm': f\"Models/Mfcc/{num_classes}-CLASSES/val/agg/SVM_mfcc_{num_classes}_cls_val_ensemble_agg.csv\",\n",
+    "    'knn': f\"Models/Mfcc/{num_classes}-CLASSES/val/agg/KNN_mfcc_{num_classes}_cls_val_ensemble_agg.csv\",\n",
+    "    'naive': f\"Models/Mfcc/{num_classes}-CLASSES/val/agg/Naive_Bayes_mfcc_{num_classes}_cls_val_ensemble_agg.csv\",\n",
+    "    'forest': f\"Models/Mfcc/{num_classes}-CLASSES/val/agg/R-Forest_mfcc_{num_classes}_cls_val_ensemble_agg.csv\"\n",
     "}\n",
     "\n",
     "# Test files becomes our training files for\n",
