--- a/Ensembles/GA-Ensemble-mfcc.ipynb
+++ b/Ensembles/GA-Ensemble-mfcc.ipynb
@@ -78,7 +78,7 @@
     "    'forest': f\"Models/Mfcc/{num_classes}-CLASSES/val/agg/R-Forest_mfcc_{num_classes}_cls_val_ensemble_agg.csv\"\n",
     "}\n",
     "\n",
-    "# Test files becomes our training files for\n",
+    "# Test files becomes our training files for the genetic algorithm\n",
     "csv_files_train = [\n",
     "    csv_test_files['svm'], csv_test_files['cnn'], csv_test_files['knn'], \n",
     "    csv_test_files['resnetlstm'], csv_test_files['naive'], csv_test_files['forest'], \n",
