refactored the notebook

--- a/Ensembles/GA-Ensemble-mfcc.ipynb
+++ b/Ensembles/GA-Ensemble-mfcc.ipynb
@@ -78,7 +78,7 @@
     "    'forest': f\"Models/Mfcc/{num_classes}-CLASSES/val/agg/R-Forest_mfcc_{num_classes}_cls_val_ensemble_agg.csv\"\n",
     "}\n",
     "\n",
-    "# Test files becomes our training files for\n",
+    "# Test files becomes our training files for the genetic algorithm\n",
     "csv_files_train = [\n",
     "    csv_test_files['svm'], csv_test_files['cnn'], csv_test_files['knn'], \n",
     "    csv_test_files['resnetlstm'], csv_test_files['naive'], csv_test_files['forest'], \n",
@@ -90,24 +90,7 @@
     "    csv_test_files['svm'], csv_test_files['cnn'], csv_test_files['knn'], \n",
     "    csv_test_files['resnetlstm'], csv_test_files['naive'], csv_test_files['forest'], \n",
     "    csv_test_files['crnn'], csv_test_files['resnet']\n",
-    "]\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Sort the CSV files by the `file_name` column in ascending order\n",
-    "sorted_csv_files = sorted(csv_files_train, key=lambda f: f.split('/')[-1])\n",
-    "\n",
-    "# Iterate over the sorted CSV files\n",
-    "for csv_file in sorted_csv_files:\n",
-    "\n",
-    "    # Read the CSV file into a Pandas DataFrame\n",
-    "    df = pd.read_csv(csv_file)\n",
-    "\n",
-    "    # Sort the DataFrame by the `file_name` column in ascending order\n",
-    "    df = df.sort_values(by=['file_name'], ascending=True)\n",
-    "\n",
-    "    # Write the sorted DataFrame to the same CSV file\n",
-    "    df.to_csv(csv_file, index=False)"
+    "]"
    ]
   },
   {
@@ -117,6 +100,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def sort_csv_files(csv_files):\n",
+    "    # Sort the CSV files by the `file_name` column in ascending order\n",
+    "    sorted_csv_files = sorted(csv_files, key=lambda f: f.split('/')[-1])\n",
+    "\n",
+    "    # Iterate over the sorted CSV files\n",
+    "    for csv_file in sorted_csv_files:\n",
+    "\n",
+    "        # Read the CSV file into a Pandas DataFrame\n",
+    "        df = pd.read_csv(csv_file)\n",
+    "\n",
+    "        # Sort the DataFrame by the `file_name` column in ascending order\n",
+    "        df = df.sort_values(by=['file_name'], ascending=True)\n",
+    "\n",
+    "        # Write the sorted DataFrame to the same CSV file\n",
+    "        df.to_csv(csv_file, index=False)\n",
+    "\n",
     "def create_grouped_df(csv_files):\n",
     "    grouped_df = pd.DataFrame()\n",
     "\n",
@@ -233,8 +232,18 @@
     "    plt.ylabel(\"True Meter\")\n",
     "    plt.xlabel(\"Predicted Meter\")\n",
     "\n",
-    "    \n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef74ff6c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Get the list of predictions columns\n",
+    "sort_csv_files(csv_files_train)\n",
     "df = create_grouped_df(csv_files_train)\n",
     "test_df = create_grouped_df(csv_files_test)\n",
     "softmax_columns = [col for col in df.columns if col.endswith('_softmax_output')]"
